--- a/doc/api/HowToAddTemplates.dox
+++ b/doc/api/HowToAddTemplates.dox
@@ -4,8 +4,8 @@
 /** \page howToAddTemplates How to add templates to the application wizard
 
 Project templates provide the developer with a basic application framework.
-This is necessary for rapid application development (RAD) and makes it even
-for (unexperienced) 3rd party developer possible to create standard conforming
+This is necessary for rapid application development (RAD) and makes it even possible
+for an unexperienced 3rd party developer to create standard conforming
 applications like kedit as well as plugins for example for kdevelop or noatun.\n\n
 \ref templates_1\n
     - \ref templates_1_1
@@ -42,7 +42,7 @@ Create a directory <code>template-khello</code> with the files
     - template-khello/subdirs
     .
 </pre></code>
-\note The directory name must begin with <code>"template-"</code>.
+<b>note:</b><br> The directory name must begin with <code>"template-"</code>.
 
 \subsection templates_1_2 I.2. Step 2: The Files in Detail
 
@@ -80,7 +80,7 @@ The application wizard looks into this file to get
     - and the file templates the project uses (<code>FileTemplates=</code>).
     .
 
-\attention The file <code>template-khello/khello</code> must have the same name as
+<b>attention:</b><br> The file <code>template-khello/khello</code> must have the same name as
 the right half of the directory! If the directory is <code>template-foobar</code>
 the file must be <code>template-foobar/foobar</code>.
 
@@ -104,7 +104,7 @@ The following script is used to install the template and replaces all
 variables by the corresponding value. The result is a hopefully working
 kdevelop project!
 \verbinclude khello/script
-\note There are several application templates which use some identical
+<b>note:</b><br> There are several application templates which use some identical
 files - that's why some files are taken from the <code>"template-common"</code>-directory.
 
 \section templates_2 II. Registration/Installation Of The Application Template
@@ -141,7 +141,7 @@ mv "$newdir/template-khello/khello" "$newdir/templates/"
 echo "done"
 \endcode
 \n
-\attention Please test your template whether it installs and behaves correctly! Test, test and test again! ;)
+<b>attention:</b><br> Please test your template whether it installs and behaves correctly! Test, test and test again! ;)
 
 \section templates_3 III. How To Add The Template To KDevelop CVS HEAD
 
@@ -161,7 +161,7 @@ script.local
     \verbinclude khello/Makefile.am
     .
 Finally add <code>"template-khello"</code> to "SUBDIRS = " in <code>kdevelop/parts/appwizard/Makefile.am</code>.
-\attention Please test your template whether it installs and behaves correctly!
+<b>attention:</b><br> Please test your template whether it installs and behaves correctly!
 Test, test and test again! It works? Well - now talk to the kdevelop guys so
 that they know what's going on and probably you may commit. ;)
 
