--- a/doc/api/LangSupportStatus.dox
+++ b/doc/api/LangSupportStatus.dox
@@ -60,7 +60,7 @@
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
-      <td bgcolor="red">N</td>
+      <td bgcolor="yellow">Y</td>
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
       <td bgcolor="green">N/A</td>
